update posters handler donw
